--- a/sssv.us.yaml
+++ b/sssv.us.yaml
@@ -2793,8 +2793,8 @@ segments:
     - [0xFA8D0, .data, data/D_04009870_FA8D0]
     - [0xFA9B0, sssv_vtx, data/inc/D_04009950_FA9B0]
     - [0xFAA10, .data, data/D_040099B0_FAA10]
-    - [0xFAA50, ci4, img/chamelon.D_040099F0_FAA50.ci4, 32, 32]
-    - [0xFAC50, palette, img/chamelon.D_040099F0_FAA50.ci4]
+    - [0xFAA50, ci4, img/chameleon.D_040099F0_FAA50.ci4, 32, 32]
+    - [0xFAC50, palette, img/chameleon.D_040099F0_FAA50.ci4]
     - [0xFAC70, ci4, img/D_04009C10_FAC70.ci4, 32, 32]
     - [0xFAE70, palette, img/D_04009C10_FAC70.ci4]
     - [0xFAE90, sssv_vtx, data/inc/D_04009E30_FAE90]
@@ -3849,32 +3849,45 @@ segments:
     - [0x7B9580, sssv_vtx, data/inc/D_803A7ED0]
     - [0x7B9780, sssv_vtx, data/inc/D_803A80D0]
     - [0x7B9940] # end of vtx
-    - [0x7B99F0, bin] # overlay2_725D10 data?
+    - [0x7B99F0, data] # overlay2_725D10 data?
     - [0x7B9A00, .data, overlay2_75BC80]
     - [0x7B9A20, data]
     - [0x7B9A30, data, sssv/animals/tortoise]
-    - [0x7B9BD0, bin]
+    - [0x7B9BD0, data]
     # - [0x7B9BD8, .data, data/objects_7B9BD8] # 0x9C objects x 247  # rodata overlay2_72C680
     # - [0x7C325C, bin] # end of objects
-    - [0x7C35D0, .data, data/demo_input] # demo controller input
-    - [0x7C4F10, bin] # end of demo controller input
+    - [0x7C35D0, .data, data/demo_input] # demo controller input]
+    # could/should this all just be "animals.h" data?
+    - [0x7C4F10, data, sssv/animals/hyena]
+    - [0x7C5210, data, sssv/animals/chameleon]
+    - [0x7C5400, data, sssv/animals/evo_microchip]
+    - [0x7C5600, data, sssv/animals/rat]
+    - [0x7C56C0, data, sssv/animals/sheep]
+    - [0x7C58B0, data, sssv/animals/penguin]
     - [0x7C5900, data, sssv/animals/polar_bear]
-    - [0x7C5BD0, bin] # tbd
-    # - [0x7C5F38, bin] # husky texture 1? 16x16 ci
-    # - [0x7C5FB8, bin] # husky texture 2?
-    # - [0x7C6038, bin] # tbd
-    - [0x7C6F50, .data, sssv/animals/cool_cod] # cool cod
-    - [0x7C6F90, bin] # tbd
+    - [0x7C5BD0, data, sssv/animals/husky] # tbd
+    - [0x7C5FE0, data, sssv/animals/vulture]
+    - [0x7C60D0, data, sssv/animals/camel]
+    - [0x7C62E0, data, sssv/animals/kangaroo]
+    # - [0x7C6528, data, sssv/animals/desert_fox]
+    - [0x7C65E0, data, sssv/animals/walrus]
+    - [0x7C6810, data, sssv/animals/scorpion]
+    - [0x7C69E0, data, sssv/animals/gorilla]
+    - [0x7C6C60, data, sssv/animals/elephant]
+    - [0x7C6E20, data, sssv/animals/seagull]
+    - [0x7C6F10, data, sssv/animals/pirana]
+    - [0x7C6F50, .data, sssv/animals/cool_cod]
+    - [0x7C6F90, data] # used in sssv/terminal_background
     # - [0x7BC970, bin] # "all of the objects in the game (not just in the area you are in)" 0xB0 per item
     - [0x7C73D0, .data, overlay2_794EE0] # list of all behaviours
-    - [0x7C74E0, bin]
+    - [0x7C74E0, data, sssv/animals/evo]
     - [0x7C76B0, .data, sssv/credits]
-    - [0x7C7960, bin]
-    - [0x7C79C0, bin] # D_803B6310_7C79C0
+    - [0x7C7960, data] # tbd
+    - [0x7C79C0, data] # D_803B6310_7C79C0
     - [0x7C79D0, .data, sssv/terminal_background]
-    - [0x7C7DA0, data] # tbd
+    - [0x7C7DA0, data] # overlay2_7A0DA0?
     - [0x7C7F40, .data, overlay2_7A8A50] # data for overlay2_7A8A50?
-    - [0x7C86B0, data] # pointers
+    - [0x7C86B0, data] # overlay2_7A8A50 pointers
     # - [0x7C87B8, bin] # pointers to displaylists # 7C87B8
     - [0x7C8880, data, ui_main_menu] # D_803B71D0
     - [0x7C8B30, .data, ui_main_menu]
@@ -3932,10 +3945,8 @@ segments:
     - [0x7D0140, .rodata, sssv/animals/tortoise]
     - [0x7D01E0, .rodata, sssv/animals/hyena]
     - [0x7D0210, .rodata, sssv/animals/chameleon]
-    # - [0x7D0220, .rodata, sssv/animals/evo_microchip]
     - [0x7D0220, .rodata, overlay2_76E7D0]
     - [0x7D02B0, .rodata, sssv/animals/rat]
-    - [0x7D02C0, .rodata, sssv/animals/rat]
     - [0x7D02D0, .rodata, sssv/animals/sheep]
     - [0x7D0310, .rodata, overlay2_7741B0]
     - [0x7D05B0, .rodata, sssv/animals/penguin]
