--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -2,31 +2,26 @@ name: Create and push Docker build image
 on:
   push:
     branches: [ master ]
+    paths:
+      - Dockerfile
+      - packages.txt
+      - requirements.txt
+      - .bash_aliases
 jobs:
   push_to_dockerhub:
-    name: Publish Docker build image to Docker Hub + Github Registry
+    name: Publish Docker build image to Github Registry
     runs-on: ubuntu-latest
     permissions:
       contents: read
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Log in to GitHub Docker Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
-      - name: Build and push to Docker Hub
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          tags: markstreet/sssv:latest
       - name: Build and push to Github registry
         uses: docker/build-push-action@v4
         with:
