--- a/permuter_settings.toml
+++ b/permuter_settings.toml
@@ -11,6 +11,7 @@ compiler_type = "ido"
 "MIN" = "int"
 "MAX" = "int"
 "ABS" = "int"
+"SIGNUM" = "int"
 "SFX_.*" = "int"
 "ATTACK_.*" = "int"
 "FTOFIX32" = "int"
