--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -7,21 +7,23 @@ on:
       - packages.txt
       - requirements.txt
       - .bash_aliases
+      - .github/workflows/docker.yaml
 jobs:
   push_to_dockerhub:
     name: Publish Docker build image to Github Registry
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      packages: write
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v3
-      - name: Log in to GitHub Docker Registry
-        uses: docker/login-action@v2
+        uses: actions/checkout@v4
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHCR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push to Github registry
         uses: docker/build-push-action@v4
         with:
