--- a/sssv.us.yaml
+++ b/sssv.us.yaml
@@ -3804,7 +3804,7 @@ segments:
     - [0x7B4440, data, overlay2_6EC720]
     - [0x7B5040, data, sssv/dynamic_tail]  # dynamic tail data
     - [0x7B5B80, .data, sssv/animals/fox]
-    - [0x7B5E60, bin, overlay2_716900_data] # ?
+    - [0x7B5E60, data, overlay2_716900_data] # ?
     - [0x7B5F70, .data, sssv/aidata]
     - [0x7B62E0, .data, sssv/animals/dog]
     - [0x7B65A0, data, sssv/animals/hippo]
@@ -3823,14 +3823,12 @@ segments:
     - [0x7B73D0, data, sssv/animals/mouse]
     - [0x7B7550, data, sssv/animals/bear]
     - [0x7B7720, data, overlay2_739290] # D_803A6070_7B7720
-    - [0x7B7A60, bin] # D_803A63B0_7B7A60
+    - [0x7B7A60, data] # D_803A63B0_7B7A60
     - [0x7B7B20, .data, overlay2_6ED230] # animal sound lookup table? wrong place?
-    - [0x7B7C80, bin] # animal sounds lookup
-    - [0x7B7D30, bin] # animal sounds lookup
-    - [0x7B7DE0, bin] #
+    - [0x7B7C80, data] # animal sounds lookup
     - [0x7B8370, data] # sssv/camera
-    - [0x7B83A0, bin]
-    - [0x7B83D0, bin] # something else
+    - [0x7B83D0, bin] # sssv/camera
+    - [0x7B91C0, .data, sssv/camera]
     - [0x7B9580, .data, data/D_803A8290_7B9940] # green crib??
     - [0x7B9580, sssv_vtx, data/inc/D_803A7ED0]
     - [0x7B9780, sssv_vtx, data/inc/D_803A80D0]
